--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="How to Make Health and Fitness a Lifestyle" />
 <meta name="description" content="How to Make Health and Fitness a Lifestyle" />
 <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-
+<meta name="facebook-domain-verification" content="wjwap2fw0imdxfgr3teujwdw64lpbn" />
 
 </head>
 <body id="7zWTZRhe">
